--- a/drivers/net/Kconfig
+++ b/drivers/net/Kconfig
@@ -910,6 +910,7 @@ config SMC91X
 config TI_DAVINCI_EMAC
 	tristate "TI DaVinci EMAC Support"
 	depends on ARM && ARCH_DAVINCI
+	select PHYLIB
 	help
 	  This driver supports TI's DaVinci Ethernet .
 
