--- a/arch/arm/mach-davinci/Makefile
+++ b/arch/arm/mach-davinci/Makefile
@@ -5,7 +5,9 @@
 
 # Common objects
 obj-y 			:= time.o irq.o clock.o serial.o io.o id.o psc.o \
-			   gpio.o mux.o devices.o usb.o dma.o common.o iram.o
+			   gpio.o devices.o usb.o dma.o common.o iram.o
+
+obj-$(CONFIG_DAVINCI_MUX)		+= mux.o mux_cfg.o
 
 # Board specific
 obj-$(CONFIG_MACH_DAVINCI_EVM)  	+= board-dm644x-evm.o
