--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -269,4 +269,14 @@ config INPUT_DM355EVM
 
 	  To compile this driver as a module, choose M here: the
 	  module will be called dm355evm_keys.
+
+config INPUT_DM365EVM
+	tristate "TI DaVinci DM365 EVM IR Remote"
+	depends on MACH_DAVINCI_DM365_EVM
+	help
+	  Supports the IR remote used with the DM365 EVM board.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called dm365evm_keys.
+
 endif
